MP3 Support, better layout

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<button type="submit">Download &amp; Stream</button>
 	</form>
 
-	<p id="status"></p>
-
-	<div class="output"></div>
+	<div class="output">
+		<p id="title"></p>
+	</div>
 
 	<p id="percentage"></p>
 
