--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<div class="titlebar"></div>
 	<h1>Stream Torrent Files</h1>
 	<button id="put-in-tray">
-		<img src="assets/img/tray.png" title="Add Menubar Icon To Show Download Percentage">
+		<img src="assets/img/tray-up.png" title="Add Menubar Icon To Show Download Percentage">
 	</button>
 	<img id="loading" src="assets/img/loading.gif">
 
