Video player shortcuts and notifications when file has downloaded

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 	<p id="percentage"></p>
 
+	<script src="assets/js/video.js"></script>
 	<script src="render/base.js"></script>
 	<script type="text/javascript">require('./render/render')</script>
 </body>
