--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 	<script src="assets/js/video.js"></script>
 	<script src="render/base.js"></script>
-	<script type="text/javascript">require('./render/render')</script>
+	<script type="text/javascript">require('./render/tray')</script>
 </body>
 </html>
