--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 	<div class="titlebar"></div>
 	<h1>Stream Torrent Files</h1>
-	<button id="put-in-tray">
-		<img src="assets/img/tray-up.png" title="Add Menubar Icon To Show Download Percentage">
+	<button id="put-in-tray" title="Show download percentage in menu bar">
+		<img src="assets/img/tray-up.png">
 	</button>
 	<img id="loading" src="assets/img/loading.gif">
 
@@ -25,6 +25,7 @@
 
 	<p id="percentage"></p>
 
+	<script type="text/javascript">require('./render/menu')</script>
 	<script src="assets/js/video.js"></script>
 	<script src="render/base.js"></script>
 	<script type="text/javascript">require('./render/tray')</script>
